# AI-Powered-Traffic-Prediction-and-Management-System

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
config/: density_thresholds.yaml  settings.py
dashboard/: app.py
dashboard/pages/: 01_live_detection.py  02_vehicle_counts.py  03_traffic_density.py  04_predictions.py  05_model_comparison.py  07_export.py  08_accident_detection.py  09_anpr.py  10_emergency_vehicles.py  11_alerts.py  12_traffic_map.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md
notebooks/: train_colab.ipynb
screenshots/: README.md
scripts/: convert_annotations.py  download_real_dataset.py  download_test_videos.py  download_youtube_videos.py  extract_frames.py  prepare_lstm_data.py
src/accident_detection/: __init__.py  accident_detector.py  motion_detector.py
src/alerts/: __init__.py  alert_manager.py  email_sender.py  notification_sender.py
src/anpr/: __init__.py  illegal_vehicle_checker.py  plate_detector.py  plate_reader.py
src/classification/: __init__.py  density_classifier.py
src/counting/: __init__.py  count_aggregator.py  counting_utils.py  line_counter.py  zone_counter.py
src/db/: __init__.py  database.py  repositories.py  schema.py
src/detection/: __init__.py  detector.py  model_loader.py  yolov10_detector.py  yolov8_detector.py  yolov9_detector.py
src/emergency_detection/: __init__.py  (+2 more)
tests/: conftest.py  test_alert_manager.py  test_config_loader.py  test_counting.py  test_dashboard_pages.py  test_density_classifier.py  test_detection.py  test_email_sender.py  test_env_validator.py  test_export.py  test_fcm_sender.py  test_lstm_model.py  test_notification_sender.py  test_retry.py
trained_models/: lstm_traffic_predictor.pth  model_comparison.csv
training/: benchmark_models.py  evaluate.py  train_lstm.py  train_yolov10.py  train_yolov8.py  train_yolov9.py
(+799 files in other folders)
